--- a/docs/src/pages/versions/index.astro
+++ b/docs/src/pages/versions/index.astro
@@ -1,5 +1,5 @@
 ---
-import { joinURL } from "ufo";
+import { joinURL, withTrailingSlash } from "ufo";
 import { Octokit, type RestEndpointMethodTypes } from "@octokit/rest";
 
 import {
@@ -44,9 +44,9 @@ const schemaData = {
 
   mainEntityOfPage: {
     "@type": "WebPage",
-    "@id": joinURL(PRODUCTION_BASE_URL, "versions"),
+    "@id": withTrailingSlash(joinURL(PRODUCTION_BASE_URL, "versions")),
   },
-  url: joinURL(PRODUCTION_BASE_URL, "versions"),
+  url: withTrailingSlash(joinURL(PRODUCTION_BASE_URL, "versions")),
 
   name: "Live Background Removal Lite Version History",
   alternateName: ["Changelog", "Release Notes", "Software Updates"],
@@ -64,7 +64,7 @@ const schemaData = {
     "@type": "ListItem",
     position: index + 1,
     name: `Version ${release.tag_name}`,
-    url: joinURL(PRODUCTION_BASE_URL, "versions", release.tag_name),
+    url: withTrailingSlash(joinURL(PRODUCTION_BASE_URL, "versions", release.tag_name)),
   })),
 };
 ---
@@ -76,7 +76,7 @@ const schemaData = {
       name="description"
       content="Official release archive for Live Background Removal Lite. Access all past versions, release notes, and download links in one place."
     />
-    <link rel="canonical" href={joinURL(PRODUCTION_BASE_URL, "versions")} />
+    <link rel="canonical" href={withTrailingSlash(joinURL(PRODUCTION_BASE_URL, "versions"))} />
     <script type="application/ld+json" set:html={JSON.stringify(schemaData)} />
   </Fragment>
 
@@ -88,7 +88,7 @@ const schemaData = {
 
     <h2>Latest Release</h2>
     <p id="latest-release">
-      <a href={joinURL(BASE_URL, "versions", latestRelease.tag_name)}
+      <a href={withTrailingSlash(joinURL(BASE_URL, "versions", latestRelease.tag_name))}
         ><strong>{latestRelease.tag_name}</strong>
         (<local-date data-date={latestRelease.published_at}
           ><time datetime={latestRelease.published_at}
@@ -100,7 +100,7 @@ const schemaData = {
 
     <nav aria-label="Page navigation">
       <p>
-        <a href={joinURL(BASE_URL)}>Back to Top</a>
+        <a href={withTrailingSlash(joinURL(BASE_URL))}>Back to Top</a>
       </p>
     </nav>
 
@@ -111,7 +111,7 @@ const schemaData = {
       {
         pastReleases.map((release) => (
           <li>
-            <a href={joinURL(BASE_URL, "versions", release.tag_name)}>
+            <a href={withTrailingSlash(joinURL(BASE_URL, "versions", release.tag_name))}>
               {release.tag_name}
               {/* prettier-ignore */}(
               <local-date data-date={release.published_at}>
